--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@angular/platform-browser": "^17.3.4",
     "@angular/platform-browser-dynamic": "^17.3.4",
     "@angular/router": "^17.3.4",
-    "@coreui/angular": "~5.0.2",
+    "@coreui/angular": "^5.1.1",
     "@coreui/angular-chartjs": "~5.0.2",
     "@coreui/chartjs": "~4.0.0",
     "@coreui/coreui": "~5.0.0",
